Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-20772

SSL connections may get stuck "forever" eating CPU

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Critical
    • 4.6.0
    • 4.0.0, 4.1.0, 4.1.1, 4.1.2, 4.5.0, 4.5.1, 4.6.0, 5.0.0
    • memcached
    • None
    • Untriaged
    • Unknown

    Description

      If we failed to send the last fragment of the drain buffer and there is a socket error (disconnected etc), the connection is stuck in an illegal state and looping "forever".

      See http://src.couchbase.org/source/xref/4.1.1/memcached/daemon/memcached.c#6713

      We need to check the ssl.error and return hard error.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              trond Trond Norbye
              trond Trond Norbye
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty