MB-20772: Catch errors during final flush of ssl pipe

We need to extend the test framework with methods to inject
socket errors in order to create a unit test for this.

Change-Id: I29972db6de6de7c36730a72778792d55a9c71589
Reviewed-on: http://review.couchbase.org/67354
Reviewed-by: Daniel Owen <owend@couchbase.com>
Reviewed-by: Jim Walker <jim@couchbase.com>
Well-Formed: buildbot <build@couchbase.com>
Tested-by: buildbot <build@couchbase.com>